force-app/main/default/objects/Delivery_Schedule__c/Delivery_Schedule__c.object-meta.xml
<CustomObject>
    <description>Contracted delivery cadence for a customer Contract.</description>
    <label>Delivery Schedule</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>